--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,13 +30,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd sz_multijob/ui
+        cache-dependency-path: sz_multijob/ui/package-lock.json
     - run: npm ci
     - run: npm run build
 
     - name: Create Releasable
       run: |
-       cd ..
        rm -rf sz_multijob/ui/public
        rm -rf sz_multijob/ui/src
        rm -rf sz_multijob/ui/package.json
