--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: sz_multijob/ui/package-lock.json
-    - run: npm ci
+    - run: npm install
     - run: npm run build
 
     - name: Create Releasable
