--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,12 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ui/package-lock.json
-    - run: npm install
-    - run: npm run build
+
+    - name: Build Client UI
+      run: |
+        cd ui
+        npm install
+        npm run build
 
     - name: Create Releasable
       run: |
