--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,8 @@ jobs:
 
     - name: Update Manifest Version
       run: |
-         sed -i "s|version \"[^\"]*\"|version \"${VERSION}\"|" fxmanifest.lua
+         sed -i "s|^version \"[^\"]*\"|version \"${VERSION}\"|" fxmanifest.lua
+
 
     - name: Build Client UI
       run: |
